[package]
name = "sorters"
version = "0.1.0"
authors = ["Terts Diepraam <terts.diepraam@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }
js-sys = "0.3.22"

[dependencies.web-sys]
version = "0.3.22"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
]

[dev-dependencies]
wasm-bindgen-test = "0.2"
futures = "0.1.27"
wasm-bindgen-futures = "0.3.22"

[profile.release]
opt-level = "s"
